@@ -1,3 +1,7 @@
+2018-04-26  Alexei Podtelezhnikov  <apodtele@gmail.com>
+
+	* src/ftstring.c (main): Update initializations.
+
 2018-04-25  Alexei Podtelezhnikov  <apodtele@gmail.com>
 
 	* src/ftstring.c (main): Use size metrics instead of resolution.
